# proconnect-espace-partenaires

./: .env.development  .env.production  .env.staging  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  eslint.config.mjs  lint-staged.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  proconnect-espace-partenaires.code-workspace  review-eidas-mfa-distinction.md  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  cleanup-cache.yml  lint.yml  playwright.yml  testing.yml
.husky/: pre-commit
docker/mongodb/: entrypoint.sh  keyfile  mockdata.json
docs/: architecture.md  best-practices.md
e2e/: .gitignore  README.md  cucumber.js  package-lock.json  package.json
e2e/steps/: index.ts
e2e/uuv/: playwright.config.ts
pcdbapi/: .dockerignore  Dockerfile  Dockerfile.test  crypt.py  main.py  middleware.py  pyproject.toml  test_api.py  test_crypt.py
prisma/: db_espace.prisma  db_proconnect.prisma
scripts/: generate-search-index.ts  prebuild.ts
scripts/__tests__/: prebuild.test.ts
src/: mdx-components.tsx
src/components/: AppSideMenu.tsx  CodeBlock.module.css  CodeBlock.tsx  CopyToClipboard.tsx  CopyableField.tsx  EditableList.tsx  MaintenanceBanner.tsx  ProviderUrl.tsx  (+2 more)
tests-playwright/: accessibilite.spec.ts  cgu.spec.ts  healthz.spec.ts  home.spec.ts  mentions-legales.spec.ts  politique-confidentialite.spec.ts  stats.spec.ts
tests-vitest/: index.spec.tsx
(+103 files in other folders)
