[project]
name = "pcdbapi"
version = "0.1.0"
description = "ProConnect Database API"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.8",
    "motor==3.7.0",
    "uvicorn==0.34.0",
    "pydantic==2.10.6",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "asgi-lifespan==2.1.0",
    "ruff==0.9.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
    "*/migrations/*",
]
line-length = 99


[tool.ruff.lint]
ignore = ["DJ001", "PLR2004", "S101", "PLR0913", "PLR0911"]
select = [
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "DJ",    # flake8-django
    "I",     # isort
    "PLC",   # pylint-convention
    "PLE",   # pylint-error
    "PLR",   # pylint-refactoring
    "PLW",   # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S",     # flake8-bandit
    "SLF",   # flake8-self
    "T20",   # flake8-print
]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","third-party","first-party","local-folder"]
extra-standard-library = ["tomllib"]
